--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
+@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300&display=swap");
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-family: "IBM Plex Mono", monospace;
+	font-size: 62.5%;
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+#root {
+	height: 100%;
 }
